NoRemap annotation, mostly for enums, remapping of methods on classes which extend remapped classes

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compileOnly files('run/versions/1.16.4-flame/1.16.4-flame.jar')
     compileOnly files('run/versions/1.16.5-srg/1.16.5-srg.jar')
 
+    compileOnly files('run/flame_mods/FlameAPI-MC-1.16.4-1.0-SNAPSHOT.jar')
+
     // TODO: create some form of gradle thing which minifies this into a single line
     implementation 'com.mojang:patchy:1.1'
     implementation 'oshi-project:oshi-core:1.1'
